--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  max-width: 100vw;
+  flex-wrap: wrap;
+  z-index: 1;
+  max-height: fit-content;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container .movieCard{
+  position: relative;
+  width: 270px;
+  height: 290px;
+  margin: 15px;
+  box-shadow: 10px 10px 15px rgb(0, 0, 0, 0.5) ;
+  background: linear-gradient(to right bottom, #57032cef, #49bce35e);
+  backdrop-filter: blur(2px);
+  justify-content: center;
+  text-align: center;
+  color: rgba(255, 208, 0, 0.911);
 }
