--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@
 
 .container .movieCard{
   position: relative;
-  width: 270px;
-  height: 290px;
+  width: 230px;
+  height: 250px;
   margin: 15px;
   box-shadow: 10px 10px 15px rgb(0, 0, 0, 0.5) ;
   background: linear-gradient(to right bottom, #000000cb, #660461a2);
@@ -26,4 +26,11 @@
   color: rgba(255, 208, 0, 0.911);
 }
 
-
+.navbar{
+  background-color: rgb(36, 36, 36);
+}
+.moviereviews{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
